# PDF_Chatbot

./: .gitignore  .python-version  README.md  Report.docx  app.py  config.py  pyproject.toml  requirements.txt
chunks/: chunks.json  embeddings.npy  metadata.json
src/: document_processor.py  llm_interface.py  rag_pipeline.py  vector_db_manager.py
vectordb/: chroma.sqlite3
