[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.9.0",
    "chromadb>=0.4.22",
    "langchain>=0.1.0",
    "numpy>=1.22.0",
    "pymupdf>=1.23.6",
    "pypdf>=3.15.5",
    "pypdf2>=3.0.1",
    "scikit-learn>=1.3.0",
    "sentence-transformers>=2.2.2",
    "streamlit>=1.27.0",
    "torch>=2.0.0",
    "tqdm>=4.66.0",
    "transformers>=4.34.0",
]
